--- a/index.html
+++ b/index.html
@@ -179,12 +179,38 @@
       <h2>🚨 O que NUNCA dar pro seu cachorro comer!</h2>
       
 
-
 <iframe width="560" height="315" src="https://www.youtube.com/embed/IsI6C5SMBsA?si=-lsh-FPmGIJh3vM4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-
-
     </section>
+
+
+<section style="display: flex; justify-content: center; margin: 40px 0;">
+  <a href="https://pay.kiwify.com.br/5IK0S8c" target="_blank" style="text-decoration: none;">
+    <button style="
+      background: linear-gradient(135deg, #ff69b4, #ff1493);
+      color: white;
+      border: none;
+      padding: 18px 32px;
+      font-size: 20px;
+      font-weight: bold;
+      border-radius: 50px;
+      box-shadow: 0 0 15px rgba(255, 105, 180, 0.5);
+      cursor: pointer;
+      transition: all 0.3s ease;
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      animation: pulse 2s infinite;
+    "
+    onmouseover="this.style.transform='scale(1.08)'; this.style.boxShadow='0 0 25px rgba(255, 20, 147, 0.8)'"
+    onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 0 15px rgba(255, 105, 180, 0.5)'"
+    onmousedown="this.style.transform='scale(0.95)'"
+    onmouseup="this.style.transform='scale(1.08)'"
+    >
+      🐶 GARATIR AGORA 🐾
+    </button>
+  </a>
+</section>
 
 
 
