--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       font-size: 3rem;
       font-weight: 700;
       text-shadow: 2px 2px 6px rgba(0,0,0,0.4);
+      border: solid plum;
+      background: #ec4899;
+      border-radius: 50px;
+      margin-bottom: 0px;
     }
 
     header p {
@@ -119,14 +123,32 @@
       color: #aaa;
       padding: 2rem 1rem;
     }
+
+body {
+
+background: #ffc9e6;
+
+}
+
+.subtitulo {
+margin-top: 0px;
+background: white;
+border-radius: 50px;
+color: #e75cc9;
+margin: 0px 60px 10px 60px;
+}
+
+
+
+
   </style>
 </head>
 <body>
   <header>
-    <h1>Guia Completo do Cachorro Saudável 🐶</h1>
-    <p>Seu dog merece carinho, cuidado e muito amor!</p>
+    <h1>Guia do Cachorro Saudável </h1>
+    <p class="subtitulo">Aprenda a evitar doenças e aumentar a longevidade do seu pet com cuidados simples em casa</p>
 <p><b>click aqui e garanta agora mesmo!</b></p>
-<img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExa2hpOHY1ejduMzJhcGJrcjdhb3M1eWt4ZGxzdDdxdmk5dWVib2s3OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/Q2nxsxLqnrtgvr6ofF/giphy.gif" alt="" width="100px">
+<img class="img1" src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExa2hpOHY1ejduMzJhcGJrcjdhb3M1eWt4ZGxzdDdxdmk5dWVib2s3OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/Q2nxsxLqnrtgvr6ofF/giphy.gif" alt="" width="100px">
 
 <section style="display: flex; justify-content: center; margin: 40px 0;">
   <a href="https://pay.kiwify.com.br/5IK0S8c" target="_blank" style="text-decoration: none;">
